# PixelBeans

./: .gitignore  CLAUDE.md  cli.py  pyproject.toml
.claude/agents/: pixel-bead-expert.md
docs/: m2_prd.md  plan.md
palettes/: mard.json  scraper.py
pixelbeans/: __init__.py  cli.py  color_science.py  export.py  palette.py  pipeline.py  postprocess.py  types.py
server/: main.py  schemas.py
tests/: test_color_science.py  test_palette.py  test_pipeline.py
web/: index.html  package-lock.json  package.json  vite.config.js
web/src/: App.jsx  index.css
web/src/components/: PatternCanvas.jsx
